--- a/friends.html
+++ b/friends.html
@@ -118,7 +118,7 @@
     </div>
 
     <div id="no-mobile">
-      <span>Your screen is too big ㅠ.ㅜ</span>
+      <span>Your screen is super big ㅠ.ㅜ</span>
     </div>
     <script
       src="https://kit.fontawesome.com/bc8922bb63.js"
